Refactor Hero component button styling, update image sources, and add new components

--- a/components/hero.css
+++ b/components/hero.css
@@ -1,10 +1,6 @@
-.hero1{
-
-    
+/* .hero1{   
     background-image: url(/assets/Hero1.png);
-
-
-}
+} */
 
 .hero2{
     background-image: url(/assets/Hero2.png);
